Make LSPosed injection multi-user safe with package-ready fallback